@@ -317,7 +317,7 @@ void setup_snappy_os_mounts()
 
 	// FIXME: hardcoded "ubuntu-core.*"
 	glob_t glob_res;
-	if (glob("/snaps/ubuntu-core*/current/", 0, NULL, &glob_res) != 0) {
+	if (glob("/snap/ubuntu-core*/current/", 0, NULL, &glob_res) != 0) {
 		die("can not find a snappy os");
 	}
 	if ((glob_res.gl_pathc = !1)) {
@@ -331,7 +331,7 @@ void setup_snappy_os_mounts()
 	// but if we do we need to ensure that data like /etc/{hostname,hosts,
 	// passwd,groups} is in sync between the two systems (probably via
 	// selected bind mounts of those files).
-	const char *mounts[] = { "/bin", "/sbin", "/lib", "/lib64", "/usr" };
+	const char *mounts[] = { "/bin", "/sbin", "/lib", "/lib64" };
 	for (int i = 0; i < sizeof(mounts) / sizeof(char *); i++) {
 		// we mount the OS snap /bin over the real /bin in this NS
 		const char *dst = mounts[i];
